--- a/index.qmd
+++ b/index.qmd
@@ -19,28 +19,53 @@ editor:
 
 ## Introduction
 
-### What is "method"?
+### **What is “Missing Data and Data Imputation”?**
 
-This is an introduction to missing data and imputation, Missing data is
-common in all studies to conduct primary care research. Primary care
-research being the research done by the members of the primary care team
-with the patients and communities in which they serve. Missing data is
-an issue because it can compromise validity of the study findings which
-increases risks for bias regarding subgroups of the population who may
-be underrepresented. There's also loss of information and reduced
-statistical power. Studies have shown that high rates of missing data
-have negative consequences such as impacting primary care study
-conclusions. Holistic approaches for addressing this issue would be
-during the design phase, conduct phase and analytic phase. Prior to
-study (during the design phase) a tactic could be identifying target
-patient populations who are under-served by intervention and may have
-incentives to stay in the study. Regarding conduct phase one could
-consider multiple methods of assessment to ensure patient can get
-assessed for study measures, this means making it available to do
-virtual, at-home or self-administered surveys. After the study (during
-the analysis phase there are 4 common types of methods to address
-missing data. This includes complete case analyses, single imputation,
-inverse probability weighting and multiple imputation.
+Missing data refers to the absence of values for certain observations or
+variables in a dataset. When collecting or recording data, it is not
+uncommon to encounter situations where information is not available for
+every individual or specific variable. Missing data can occur for
+various reasons, such as non-response by participants, data entry
+errors, equipment malfunctions, or simply because certain information
+was not collected.
+
+There are three main types of missing data:
+
+**1. Missing Completely at Random (MCAR):** The missingness of data is
+unrelated to both observed and unobserved variables. In other words, the
+probability of data being missing is the same for all observations.
+
+**2. Missing at Random (MAR):** The missingness is related to observed
+variables but not to the values of the missing data itself. In this
+case, the probability of data being missing can be predicted by other
+variables in the dataset.
+
+**3. Missing Not at Random (MNAR):** The missingness is related to the
+values of the missing data itself, even after considering observed
+variables. This type of missing data can introduce bias and is often
+more challenging to handle.
+
+Handling missing data is crucial in statistical analysis because it can
+lead to biased or inefficient results if not addressed properly.
+Researchers employ various techniques, such as imputation methods, to
+estimate or replace the missing values and ensure the validity and
+reliability of their analyses. Imputation involves filling in missing
+values with plausible estimates based on the observed data or using
+statistical models to predict missing values.
+
+Researchers need to be aware of the nature and mechanisms of missing
+data in their datasets, as the choice of imputation method depends on
+these factors. Ignoring missing data or handling it incorrectly can
+impact the accuracy and generalizability of study findings.
+
+Data imputation is a technique that aims to replace the missing data
+with a substitute value. This technique can be applied when removing
+data from the dataset is not feasible. Due to reasons such as reduction
+in size of dataset by a large extent. Reduction in this way can also
+raise concerns for biases and incorrect analysis, Overall reduction can
+lead to distortion in the data variables and impact of the final model
+with biases. The goal is to restore the complete dataset and not lose
+anymore of the data.
 
 ### Related work
 
@@ -57,45 +82,29 @@ the data is independent from the value of the data. Not missing at
 random data completely depends on the value of the data. For each of
 these categories the level of bias can be different.
 
-Missing data can compromise inferences and cause bias regarding clinical
-trials.\
-The power of a randomized clinical trials is from the random allocation
-of patients. Randomized clinical trials are often analyzed using the
-intention to treat principle. When some patients are lost to follow-up
-that impacts results of trial. It’s also important what is causing the
-missingness. There are 3 typical mechanisms that cause missing data:
-missing completely at random (MCAR), missing at random (MAR) and missing
-not at random (MNAR). To prevent missing data a randomized trial should
-be planned every detail in advance. Some of these details to prevent
-missing data include making sure registration numbers and values of
-stratification variables are registered. Methods to handle missing data
-in primary analysis is complete case analysis, single imputation,
-model-based methods and multiple imputation.
+### Methods
 
-Missing completely at random (MCAR) is when the data that is missing is
-independent of the observed and unobserved data. There are no systematic
-differences between patients who have the data completed versus those
-who don’t. An example of this could be when some patients have missing
-lab values because the samples were mishandled. Statistical power is
-decreased and the analyzable population of the study, but bias is not
-introduced. Missing at random (MAR) is systematically related to the
-observed data but not the unobserved data. This can be seen if there a
-survey examining depression and the male patients are less likely to
-compete the depression severity compared to female patients. Missing not
-at random (MNAR) is when the missing data is systemically related to
-unobserved data. This unobserved data is cannot measured by the
-investigator. An example of this would be if patients who have severe
-depression are more likely to refuse to finish the survey regarding
-depression severity.
+ Some of the data imputation techniques are mentioned below.\
+\
+-   Next or Previous Value 
 
-Data imputation is a technique that aims to replace the missing data
-with a substitute value. This technique can be applied when removing
-data from the dataset is not feasible. Due to reasons such as reduction
-in size of dataset by a large extent. Reduction in this way can also
-raise concerns for biases and incorrect analysis, Overall reduction can
-lead to distortion in the data variables and impact of the final model
-with biases. The goal is to restore the complete dataset and not lose
-anymore of the data.
+\-   K Nearest Neighbors
+
+\-   Maximum or Minimum Value
+
+\-   Missing Value Prediction
+
+\-   Most Frequent Value
+
+\-   Average or Linear Interpolation
+
+\-   (Rounded) Mean or Moving Average or Median Value
+
+\-   Fixed Value
+
+\-   Rule-based imputation technique
+
+\-   Random forest
 
 Some imputation techniques are complete case analysis (CCA), arbitrary
 value imputation and frequent category imputation. complete case
@@ -124,29 +133,6 @@ foreseeing the missing values by inserting appropriate variability into
 the multiple imputed values. The second stage is to utilize a standard
 statistical method. This method should fit the model of interest for
 each of the datasets that experienced imputation.
-
-## Methods
-
-The common non-parametric regression model is
-$Y_i = m(X_i) + \varepsilon_i$, where $Y_i$ can be defined as the sum of
-the regression function value $m(x)$ for $X_i$. Here $m(x)$ is unknown
-and $\varepsilon_i$ some errors. With the help of this definition, we
-can create the estimation for local averaging i.e. $m(x)$ can be
-estimated with the product of $Y_i$ average and $X_i$ is near to $x$. In
-other words, this means that we are discovering the line through the
-data points with the help of surrounding data points. The estimation
-formula is printed below [@R-base]:
-
-$$
-M_n(x) = \sum_{i=1}^{n} W_n (X_i) Y_i  \tag{1}
-$$ $W_n(x)$ is the sum of weights that belongs to all real numbers.
-Weights are positive numbers and small if $X_i$ is far from $x$.
-
-Another equation:
-
-$$
-y_i = \beta_0 + \beta_1 X_1 +\varepsilon_i
-$$
 
 ## Analysis and Results
 
