--- a/index.qmd
+++ b/index.qmd
@@ -9,12 +9,12 @@ course: STA 6257 - Advanced Statistical Modeling
 bibliography: references.bib # file contains bibtex for references
 #always_allow_html: true # this allows to get PDF with HTML features
 self-contained: true
-execute:
-  echo: true
+execute: 
   warning: false
   message: false
-format: html
-self-contained: true
+editor: 
+  markdown: 
+    wrap: 72
 ---
 
 ## Introduction
